<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView android:text="@string/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>


    <TableLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:background="@drawable/section_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow android:id="@+id/row_name" android:padding="5dp">
            <Button
                android:text="@string/button_package_name"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg"
                android:textColor="@android:color/white"
                android:onClick="onSelectPackage"
                android:textSize="13dp"
                />
            <TextView
                android:id="@+id/packageName"
                android:layout_marginLeft="20dp"
                android:text="@string/option_not_selected"
                />
        </TableRow>
        <TableRow android:id="@+id/row_environment"
                  android:padding="5dp"
                  android:visibility="gone"
            >
            <Button
                android:text="@string/button_environment"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg"
                android:textColor="@android:color/white"
                android:onClick="onSelectEnvironment"
                android:textSize="13dp"
                />
            <TextView
                android:id="@+id/environment"
                android:layout_marginLeft="20dp"
                android:text="@string/option_not_selected"
                />
        </TableRow>
        <TableRow android:id="@+id/row_language"
                  android:padding="5dp"
                  android:visibility="gone"
            >
            <Button
                android:text="@string/button_language"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg"
                android:textColor="@android:color/white"
                android:onClick="onSelectLanguage"
                android:textSize="13dp"
                />
            <TextView
                android:id="@+id/language"
                android:layout_marginLeft="20dp"
                android:text="@string/option_not_selected"
                />
        </TableRow>

    </TableLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/section_bg"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <Button
                android:id="@+id/moreInfo"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:singleLine="false"
                android:text="@string/read_more"
                android:textAllCaps="false"
                android:textSize="12dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/info"
                android:layout_toLeftOf="@id/moreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_margin="5dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Paths"
            android:background="@color/default_color"
            android:textColor="@android:color/white"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="16dp"
            />

        <ListView
            android:id="@android:id/list"
            android:divider="@color/default_color"
            android:dividerHeight="1px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>




</LinearLayout>
